testsuite/good/observers/test_multiple_events/EventSuper.flux
type EventSuper {
   int getInt();
}
methods {
   int getInt() { return 0; }
}