testsuite/bad/MissingMethodImplementation.flux
type MissingMethodImplementation {
   void presentMethod();
   int missingMethod();
}
methods {
   void presentMethod() {}
}